--- a/index.html
+++ b/index.html
@@ -81,7 +81,14 @@
 			</ul>
 			
 		</nav>
-		
+		<hr>
+		<!--CASO PRINCIPAL-->
+
+		<header class="showcase">
+			<h2>Big News Today</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi dolorum dicta consequuntur odio. Distinctio consequatur quaerat aspernatur iusto, molestias laudantium illum. Eum labore distinctio nesciunt delectus vel enim error, nostrum.</p>	
+			<a href="#" class="btn">Read More <i class="fas fa-angle-double-right"></i></a>		
+		</header>		
 	</div>
 
 
