--- a/index.html
+++ b/index.html
@@ -88,10 +88,99 @@
 			<h2>Big News Today</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi dolorum dicta consequuntur odio. Distinctio consequatur quaerat aspernatur iusto, molestias laudantium illum. Eum labore distinctio nesciunt delectus vel enim error, nostrum.</p>	
 			<a href="#" class="btn">Read More <i class="fas fa-angle-double-right"></i></a>		
-		</header>		
+		</header>	
+
+
+		<!--====  NOTICIAS NUEVAS 1 ====-->
+		
+		<div class="news-cards">
+			<div>
+				<img src="img/news1.jpg" alt="News 1">
+				<h3>Lorem, ipsum, dolor.</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit cupiditate quos qui est. Nobis, laboriosam! Molestias, quae facilis ducimus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+
+			</div>
+
+			<div>
+				<img src="img/news2.jpg" alt="News 2">
+				<h3>Lorem, ipsum, dolor.</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit cupiditate quos qui est. Nobis, laboriosam! Molestias, quae facilis ducimus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+
+			</div>
+			<div>
+				<img src="img/news3.jpg" alt="News 3">
+				<h3>Lorem, ipsum, dolor.</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit cupiditate quos qui est. Nobis, laboriosam! Molestias, quae facilis ducimus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+
+			</div>
+			<div>
+				<img src="img/news4.jpg" alt="News 4">
+				<h3>Lorem, ipsum, dolor.</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit cupiditate quos qui est. Nobis, laboriosam! Molestias, quae facilis ducimus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+
+			</div>
+		</div>	
+
+		<!--====  BANNER SECTION ====-->
+
+		<section class="cards-banner-one">
+			<div class="content">
+				<h2>Lorem ipsum, dolor.</h2>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Sed maiores nobis soluta aspernatur dolore voluptates nulla voluptatum rerum, possimus repellendus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+			</div>
+			
+		</section>
+
+		<!--====  NOTICIAS NUEVAS 2 ====-->
+
+		<div class="news-cards">
+			<div>
+				<img src="img/news1.jpg" alt="News 1">
+				<h3>Lorem, ipsum, dolor.</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit cupiditate quos qui est. Nobis, laboriosam! Molestias, quae facilis ducimus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+
+			</div>
+
+			<div>
+				<img src="img/news2.jpg" alt="News 2">
+				<h3>Lorem, ipsum, dolor.</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit cupiditate quos qui est. Nobis, laboriosam! Molestias, quae facilis ducimus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+
+			</div>
+			<div>
+				<img src="img/news3.jpg" alt="News 3">
+				<h3>Lorem, ipsum, dolor.</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit cupiditate quos qui est. Nobis, laboriosam! Molestias, quae facilis ducimus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+
+			</div>
+			<div>
+				<img src="img/news4.jpg" alt="News 4">
+				<h3>Lorem, ipsum, dolor.</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit cupiditate quos qui est. Nobis, laboriosam! Molestias, quae facilis ducimus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+
+			</div>
+		</div>	
+
+			<!--====  BANNER SECTION  2 ====-->
+
+		<section class="cards-banner-two">
+			<div class="contenaer">
+				<h2>Lorem ipsum, dolor.</h2>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Sed maiores nobis soluta aspernatur dolore voluptates nulla voluptatum rerum, possimus repellendus.</p>
+				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
+			</div>
+
+
 	</div>
-
-
 
 	<!--====  BOOTSTRAP SCRIPT CDN ====-->
 
