Cuarto y mini avance

--- a/index.html
+++ b/index.html
@@ -179,6 +179,161 @@
 				<a href="#">Learn More <i class="fas fa-angle-double-right"></i> </a>
 			</div>
 
+		</section>
+
+		<section class="social">
+			<p>Follow TechNews</p>
+			<div class="links">
+				<a href="#">
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a href="#">
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a href="#">
+					<i class="fab fa-linkedin"></i>
+				</a>
+				
+			</div>
+			
+		</section>
+
+		</div>
+
+		<div class="footer-links">
+			<div class="footer-container">
+				<ul>
+					<li>
+						<a href="#">
+							<h3>Title One</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Dark Web</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Wikipedia</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Xioami</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Google</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Tail OS</h3>
+						</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<a href="#">
+							<h3>Title One</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Dark Web</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Wikipedia</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Xioami</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Google</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Tail OS</h3>
+						</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<a href="#">
+							<h3>Title One</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Dark Web</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Wikipedia</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Xioami</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Google</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Tail OS</h3>
+						</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<a href="#">
+							<h3>Title One</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Dark Web</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Wikipedia</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Xioami</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Google</h3>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<h3>Tail OS</h3>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+
+
 
 	</div>
 
